external-crates/move/crates/move-compiler/tests/rtd_mode/id_leak/through_reference.snap
---
source: crates/move-compiler/tests/move_check_testrtdte.rs
info:
  flavor: rtd
  edition: legacy
  lint: false
---
error[E05001]: ability constraint not satisfied
   ┌─ tests/rtd_mode/id_leak/through_reference.move:11:10
   │
 9 │     public fun foo(f: Foo, ref: &mut UID) {
   │                                      --- The type 'rtd::object::UID' does not have the ability 'drop'
10 │         let Foo { id } = f;
11 │         *ref = id;
   │          ^^^ Invalid mutation. Mutation requires the 'drop' ability as the old value is destroyed
   ·
16 │     struct UID has store {
   │            --- To satisfy the constraint, the 'drop' ability would need to be added here
